# NeuralNetworkProject

./: .gitignore  CMakeLists.txt
DLL/: CMakeLists.txt  NeuralLibrary.cpp  NeuralLibrary.h  main.cpp
DLL/includes/CUDA/: CudaModuleCalc.h  CudaTensor.h  InitCuda.h
DLL/includes/IOData/: Images.h  Tensor.h
DLL/includes/NeuralController/: Conv_neural.h  Setting.h
DLL/includes/NeuralModules/: ActivationLayer.h  Conv_Layer.h  NeuralNetwork.h  Pooling.h
DLL/lib/Debug/: CUDA_test.exp  SSD.exp
DLL/src/CUDA/: CudaModuleCalc.cu
DLL/src/IOData/: Images.cpp  Tensor.cpp
DLL/src/NeuralController/: Conv_neural.cpp  Setting.cpp
DLL/src/NeuralModules/: ActivationLayer.cpp  Conv_Layer.cpp  NeuralNetwork.cpp  Pooling.cpp
NeuralNetworkUI/: NeuralNetworkUI.sln
NeuralNetworkUI/NeuralNetworkUI/: ActiveL_View.xaml  ActiveL_View.xaml.cs  ActiveL_ViewModel.cs  App.xaml  App.xaml.cs  BaseViewModel.cs  ConvL_View.xaml  ConvL_View.xaml.cs  ConvL_ViewModel.cs  FullC_View.xaml  FullC_View.xaml.cs  Fullc_ViewModel.cs  Graph.cs  MainWindow.xaml  MainWindow.xaml.cs  ModuleSettingWindow.xaml  ModuleSettingWindow.xaml.cs  NeuraSettinglView.cs  NeuralLibControl.cs  NeuralNetworkUI.csproj  NeuralSettingWindow.xaml  NeuralSettingWindow.xaml.cs  Pool_View.xaml  Pool_View.xaml.cs  Pool_ViewModel.cs  SettingViewModel.cs
includes/CUDA/: CudaModuleCalc.h  CudaTensor.h
includes/IOData/: Matrix.h
includes/NeuralModules/: ActivationLayer.h  Conv_Layer.h  NeuralNetwork.h  Neural_Module.h
src/CUDA/: CmakeLists.txt  CudaModuleCalc.cu
src/IOData/: Images.cpp  Matrix.cpp
(+6 files in other folders)
